# wavefolder_vst3

./: Cargo.toml  README.md
src/: lib.rs  utils.rs  wav_reader.rs  wf_params.rs  zero_crossing_detector.rs
