[package]
name = "wavefolder"
version = "0.5.0"
edition = "2024"

[workspace]
members = [
	"xtask",
]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
egui = "0.31.1"
hound = "3.5.1"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["vst3", "assert_process_allocs"] }
nih_plug_derive = { git = "https://github.com/robbert-vdh/nih-plug" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug" }
parking_lot = "0.12.5"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
